# praat

./: .clang-format  .gitattributes  .gitignore  GuiTrust.h  LICENSE.TXT  Makefile  Notebook.h  README.md  SampledFrameIntoSampledFrame.h  SampledIntoSampled.cpp  SoundArea_prefs.h  download_mac.html  makefile  makefile.defs  meson.build  praat.mcp  praat64_xcodeproj.dmg  praat_xcodeproj.dmg
EEG/: EEG.cpp  EEG.h  EEGAnalysisArea.cpp  EEGAnalysisArea.h  EEGAnalysisArea_prefs.h  EEGArea.cpp  EEGArea.h  EEGArea_prefs.h  EEGWindow.cpp  EEGWindow.h  EEGWindow_prefs.h  EEG_def.h  ERP.cpp  ERP.h  ERPAnalysisArea.h  ERPAnalysisArea_prefs.h  ERPArea.cpp  ERPArea.h  ERPArea_prefs.h  ERPTier.cpp  ERPTier.h  ERPTier_def.h  ERPWindow.cpp  ERPWindow.h  ERPWindow_prefs.h  ERP_def.h  Makefile  manual_EEG.cpp  meson.build  praat_EEG.cpp
FFNet/: FFNet.c  FFNet.cpp  FFNet.h  FFNet_ActivationList_Categories.cpp  FFNet_ActivationList_Categories.h  FFNet_Activation_Categories.c  FFNet_Activation_Categories.cpp  FFNet_Activation_Categories.h  FFNet_Eigen.c  FFNet_Eigen.cpp  FFNet_Eigen.h  FFNet_Matrix.c  FFNet_Matrix.cpp  FFNet_Matrix.h  FFNet_Pattern.cpp  FFNet_Pattern.h  FFNet_PatternList.cpp  FFNet_PatternList.h  FFNet_PatternList_ActivationList.cpp  FFNet_PatternList_ActivationList.h  FFNet_PatternList_Categories.cpp  FFNet_PatternList_Categories.h  FFNet_Pattern_Activation.c  FFNet_Pattern_Activation.cpp  FFNet_Pattern_Activation.h  FFNet_Pattern_ActivationList.cpp  FFNet_Pattern_ActivationList.h  FFNet_Pattern_Categories.c  FFNet_Pattern_Categories.cpp  FFNet_Pattern_Categories.h  FFNet_def.h  Makefile  RBM_extensions.cpp  RBM_extensions.h  SConscript  manual_FFNet.c  manual_FFNet.cpp  meson.build  praat_FFNet.h  praat_FFNet_init.c  (+1 more)
LPC/: .kdev_include_paths  Cepstrogram.cpp  Cepstrogram.h  Cepstrum.c  Cepstrum.cpp  Cepstrum.h  Cepstrum_and_Spectrum.c  Cepstrum_and_Spectrum.cpp  Cepstrum_and_Spectrum.h  Cepstrum_def.h  Cepstrum_enums.h  Cepstrumc.c  Cepstrumc.cpp  Cepstrumc.h  Cepstrumc_def.h  FormantEditor.cpp  FormantEditor.h  FormantEditor_prefs.h  FormantList.cpp  FormantList.h  FormantList_and_TextGrid.cpp  FormantList_and_TextGrid.h  FormantList_def.h  FormantModeler.cpp  FormantModeler.h  FormantModelerList.cpp  FormantModelerList.h  FormantModelerList_def.h  FormantModeler_def.h  FormantPath.cpp  FormantPath.h  FormantPathArea.cpp  FormantPathArea.h  FormantPathArea_prefs.h  FormantPathEditor.cpp  FormantPathEditor.h  FormantPathEditor_prefs.h  FormantPath_def.h  FormantPath_to_IntervalTier.cpp  FormantPath_to_IntervalTier.h  (+119 more)
artsynth/: Art_Speaker.c  Art_Speaker.cpp  Art_Speaker.h  Art_Speaker_Delta.c  Art_Speaker_Delta.cpp  Art_Speaker_Delta.h  Art_Speaker_to_VocalTract.c  Art_Speaker_to_VocalTract.cpp  Art_Speaker_to_VocalTract.h  Articulation.c  Articulation.cpp  Articulation.h  Articulation_def.h  Articulation_enums.h  Artword.c  Artword.cpp  Artword.h  ArtwordEditor.c  ArtwordEditor.cpp  ArtwordEditor.h  Artword_Speaker.cpp  Artword_Speaker.h  Artword_Speaker_Sound.c  Artword_Speaker_Sound.cpp  Artword_Speaker_Sound.h  Artword_Speaker_to_Sound.c  Artword_Speaker_to_Sound.cpp  Artword_Speaker_to_Sound.h  Artword_def.h  Artword_to_Art.cpp  Artword_to_Art.h  Delta.c  Delta.cpp  Delta.h  Makefile  Speaker.c  Speaker.cpp  Speaker.h  Speaker_def.h  Speaker_to_Delta.c  (+7 more)
dwsys/: BinaryIndexedTree.h  ChebyshevSeries.cpp  ChebyshevSeries.h  Collection_extensions.c  Collection_extensions.cpp  Collection_extensions.h  Command.c  Command.cpp  Command.h  DLL.cpp  DLL.h  DataStore.cpp  DataStore.h  DoublyLinkedList.cpp  DoublyLinkedList.h  Eigen.c  Eigen.cpp  Eigen.h  Eigen_def.h  ExtendedReal.cpp  ExtendedReal.h  ExtendedReal_def.h  FileInMemory.cpp  FileInMemory.h  FileInMemoryManager.cpp  FileInMemoryManager.h  FileInMemoryManager_def.h  FileInMemorySet.cpp  FileInMemorySet.h  FileInMemorySet_def.h  FileInMemory_def.h  FunctionSeries.cpp  FunctionSeries.h  FunctionSeries_def.h  Graphics_extensions.cpp  Graphics_extensions.h  Graphics_extensions_enums.h  Index.c  Index.cpp  Index.h  (+104 more)
dwtools/: .DTW_def.h.kate-swp  .KlattGridEditors.cpp.kate-swp  .Sound_extensions.cpp.kate-swp  .SpeechSynthesizer.cpp.kate-swp  .Table_extensions.cpp.kate-swp  .manual_dwtools.cpp.kate-swp  .praat_David_init.cpp.kate-swp  .sconsign.dblite  Activation.c  Activation.cpp  Activation.h  ActivationList.cpp  ActivationList.h  AffineTransform.c  AffineTransform.cpp  AffineTransform.h  AffineTransform_def.h  AnalyticSound.cpp  AnalyticSound.h  ArbitrarilySampled.cpp  ArbitrarilySampled.h  CC.c  CC.cpp  CC.h  CCA.c  CCA.cpp  CCA.h  CCA_and_Correlation.c  CCA_and_Correlation.cpp  CCA_and_Correlation.h  CCA_def.h  CC_def.h  CCs_to_DTW.c  CCs_to_DTW.cpp  CCs_to_DTW.h  Categories.c  Categories.cpp  Categories.h  CategoriesEditor.c  CategoriesEditor.cpp  (+439 more)
fon/: AmplitudeTier.c  AmplitudeTier.cpp  AmplitudeTier.h  AmplitudeTierArea.cpp  AmplitudeTierArea.h  AmplitudeTierArea_prefs.h  AmplitudeTierEditor.c  AmplitudeTierEditor.cpp  AmplitudeTierEditor.h  AnyTier.c  AnyTier.cpp  AnyTier.h  AnyTier_def.h  Cochleagram.c  Cochleagram.cpp  Cochleagram.h  Cochleagram_and_Excitation.c  Cochleagram_and_Excitation.cpp  Cochleagram_and_Excitation.h  Corpus.cpp  Corpus.h  Corpus_def.h  Distributions.c  Distributions_and_Transition.c  Distributions_and_Transition.cpp  Distributions_and_Transition.h  DurationTier.c  DurationTier.cpp  DurationTier.h  DurationTierArea.cpp  DurationTierArea.h  DurationTierArea_prefs.h  DurationTierEditor.c  DurationTierEditor.cpp  DurationTierEditor.h  Excitation.c  Excitation.cpp  Excitation.h  Excitation_to_Formant.c  Excitation_to_Formant.cpp  (+432 more)
foned/: AmplitudeTierArea.cpp  AmplitudeTierArea.h  AmplitudeTierEditor.cpp  AmplitudeTierEditor.h  AnyTextGridEditor.cpp  AnyTextGridEditor.h  AnyTextGridEditor_enums.h  AnyTextGridEditor_prefs.h  DurationTierArea.cpp  DurationTierArea.h  DurationTierArea_prefs.h  DurationTierEditor.cpp  DurationTierEditor.h  FormantGridArea.cpp  FormantGridArea.h  FormantGridArea_prefs.h  FormantGridEditor.cpp  FormantGridEditor.h  FormantGridEditor_prefs.h  FunctionArea.cpp  Makefile  (+76 more)
(+4799 files in other folders)
